<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/profile_photo"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="32sp"
        android:text="@string/profile_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="@font/montserrat_light"
        android:textSize="16dp"
        android:text="@string/nim"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="@font/montserrat_light"
        android:textSize="16dp"
        android:text="@string/profile_email"/>
</LinearLayout>