<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="** Perbarui Data Siswa"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="right"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/tv_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/tv_update"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/grey_light"
            app:placeholderTextColor="@color/grey_light"
            app:endIconMode="clear_text"
            android:layout_below="@+id/tv_label_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nama"
                android:fontFamily="@font/montserrat_light"
                android:maxLength="35"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_label_tempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_name"
            android:layout_marginVertical="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/place_of_birth"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_tempat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/grey_light"
            app:placeholderTextColor="@color/grey_light"
            app:endIconMode="clear_text"
            android:layout_below="@+id/tv_label_tempat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tempat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/bukittinggi"
                android:fontFamily="@font/montserrat_light"
                android:maxLength="18"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_label_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_tempat"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/date_of_birth"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_tanggal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/grey_light"
            app:placeholderTextColor="@color/grey_light"
            app:endIconMode="clear_text"
            android:layout_below="@+id/tv_label_tanggal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/_17_08_2021"
                android:fontFamily="@font/montserrat_light"
                android:maxLength="25"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_label_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_tanggal"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginVertical="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/grey_light"
            app:placeholderTextColor="@color/grey_light"
            app:prefixText="+62"
            app:endIconMode="clear_text"
            android:layout_below="@+id/tv_label_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/ex_6285265408417"
                android:fontFamily="@font/montserrat_light"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_label_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_phone"
            android:text="@string/e_mail"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginVertical="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/grey_light"
            app:placeholderTextColor="@color/grey_light"
            app:endIconMode="clear_text"
            android:layout_below="@+id/tv_label_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/email"
                android:fontFamily="@font/montserrat_light"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
</ScrollView>